<resources>
    <string name="app_name">Autoenticator</string>

    <!-- Main Activity -->
    <string name="info">
        This application is for research and educational purpose only.\n\n
        It is strongly recommended to confirm the 2FA request manually by yourself.
    </string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="loading">Doing work…</string>

    <string name="try_step_1">Go to any website that</string>
    <string name="try_step_2">requires 2FA and see the magic!</string>

    <string name="screen_off_text">(It works even when the screen is off!)</string>

    <!-- Menu title -->
    <string name="about">About</string>
    <string name="settings">Settings</string>

    <!-- Alert dialog -->
    <string name="alert_title">Permission required</string>
    <string name="alert_message">Autoentication needs to access your device\'s notification in order to work</string>
    <string name="okay">OK</string>

    <!-- Settings -->
    <string name="enable_toast">Enable toast message</string>
    <string name="toast_info">Shown when accepting 2FA (click for demo)</string>
    <string name="manage_system_noti_permission">Manage application notification access</string>

    <!-- About -->
    <string name="what_is_autoenticator">What is Autoenticator?</string>
    <string name="autoenticator_info">Autoenticator is an app that helps you accept 2FA request on your phone automatically.\nIt works even if the screen is off.</string>

    <string name="how_does_it_work">How does it work?</string>
    <string name="work_info">It works by helping you to press the confirm button when the 2FA request notification pops up. Therefore it will need the access of your notifications.</string>

    <string name="security">Security and privacy</string>
    <string name="security_info">This app will only access notifications of the mobile app "Duo Security",
        and it will only perform the confirm action without accessing its data.
        \nThis project is completely open-sourced and its source code is available\t<a href="https://github.com/Camerash/Autoenticator">on Github</a>
    </string>

    <string name="license">LICENSE</string>

    <string name="next">NEXT</string>

    <string name="version">Version</string>

    <!-- Notification listener service -->
    <string name="noti_service_name">Auth Notification Listener Service</string>
    <string name="autoenticating">Autoenticating…</string>
</resources>
