<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="@drawable/divider"
        android:showDividers="middle">

        <RelativeLayout
            android:id="@+id/toast_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="16dp">

            <TextView
                android:id="@+id/toast_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/setting_text_size"
                android:text="@string/enable_toast"
                android:layout_toStartOf="@id/toast_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/setting_text_size"
                android:hint="@string/toast_info"
                android:layout_below="@id/toast_text"/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/toast_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/manage_system_noti_permission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="16dp">

            <TextView
                android:id="@+id/manage_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/setting_text_size"
                android:text="@string/manage_system_noti_permission"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>